build: 更新建置環境並修正新版 IDE 相容性錯誤
原始專案使用較舊的 Gradle 版本，無法在新版的 Android Studio 和高於 8 的 JDK 環境下成功編譯。本次提交主要更新了專案的建置設定，並修正了因版本升級所引發的編譯錯誤。

主要變更如下：

- **Gradle 版本升級**:
  - 將 Gradle Wrapper 從 4.6 升級至 8.6，以支援新版 JDK。
  - 將 Android Gradle Plugin (AGP) 版本從 3.2.1 升級至 8.4.0。

- **Gradle 設定檔調整**:
  - 在 `app/build.gradle` 中新增 `namespace` 以符合新版 AGP 要求。
  - 啟用 `buildConfig true` 功能，解決 `BuildConfig` 類別找不到的問題。
  - 明確設定 `compileOptions` 的 `sourceCompatibility` 與 `targetCompatibility` 為 Java 1.8。

- **原始碼修正**:
  - 將多個檔案中使用資源 ID 的 `switch` 語句重構為 `if-else if` 結構，以解決因新版 AGP 不再將資源 ID 視為常數所導致的 `constant expression required` 編譯錯誤。
  - 主要修改的檔案與方法如下：
    - `Main.java`: 在 `onOptionsItemSelected` 方法中。
    - `motion/MotionSDKExampleActivity.java`: 在 `onClick` 方法中。
    - `motion/demo/ControlMotionActivity.java`: 在 `onClick` 方法中。
    - `led/LEDExampleActivity.java`: 在 `onLEDClick` 方法中。
    - `activity/StartNuwaAuthorizationActivity.java`: 在 `onClick` 方法中。

這些修改使得專案能夠在現代化的開發環境中成功建置並運行。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,13 @@ repositories {
     }
 }
 android {
+    namespace 'com.nuwarobotics.example'
     compileSdkVersion 28
+
+    buildFeatures {
+        buildConfig true
+    }
+
     defaultConfig {
         applicationId "com.nuwarobotics.example"
         minSdkVersion 28
@@ -42,4 +48,6 @@ dependencies {
     //Step 1 : Copy aar to project lib folder : NuwaSDKExample\app\libs
     //Step 2 : Replace below NuwaBleInterface file name
     implementation(name: 'NuwaBLEInterface_2020-11-27_v1.0_62415eb_release', ext: 'aar')
+
+    implementation "com.google.code.gson:gson:2.3.1"
 }
