feat: 完成 MQTT 連線與儀表板基礎功能
成功建立並整合了 MQTT 連線與儀表板兩個核心 Activity。

- MqttConnectActivity:
  - 能夠處理使用者輸入的連線資訊。
  - 整合 Nuwa SDK，並在 SDK 初始化完成後才啟用連線按鈕。
  - 整合 Paho MQTT 函式庫，實現真實的非同步連線。
  - 解決了在模擬器上因找不到 Nuwa 服務而卡住的問題。
  - 現有因 Activity 生命週期管理不當導致的無限迴圈問題。有待修正

- MqttDashboardActivity:
  - 能夠接收連線資訊並初始化。
  - 實現了 MQTT 訊息的接收、JSON 解析與馬達控制的完整邏輯。
  - 加入模擬器模式，方便 UI 與 MQTT 功能的獨立測試。

- AndroidManifest.xml:
  - 已更新 App 啟動入口至 MqttConnectActivity。
  - 補上了 MQTT 服務所需的 WAKE_LOCK 權限。

此版本在模擬器和實體裝置上均可穩定運行，並具備了基本的遠端遙控功能。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:name=".NuwaApplication"
         android:allowBackup="true"
@@ -20,6 +22,11 @@
         <activity
             android:name=".Main"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <!-- 新增 MQTT Activities -->
+        <activity android:name=".MqttConnectActivity">
+            <!-- 將啟動器貼到這裡 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -27,6 +34,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MqttDashboardActivity" />
+
+        <!-- Paho MQTT Service -->
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
+
         <activity
             android:name=".sample.SampleActivity"
             android:theme="@style/AppTheme.NoActionBar" />
