--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation(name: 'NuwaBLEInterface_2020-11-27_v1.0_62415eb_release', ext: 'aar')
 
     implementation "com.google.code.gson:gson:2.3.1"
+    // Paho MQTT Android Service Library
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
 }
