--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 android {
     namespace 'com.nuwarobotics.example'
-    compileSdkVersion 28
+    compileSdkVersion 34
 
     buildFeatures {
         buildConfig true
@@ -15,7 +15,7 @@ android {
     defaultConfig {
         applicationId "com.nuwarobotics.example"
         minSdkVersion 28
-        targetSdkVersion 28
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -34,11 +34,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation "com.android.support:support-v4:28.0.0"
-    implementation "com.android.support:support-v13:28.0.0"
-    implementation 'com.android.support:design:28.0.0'
+//    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation "com.android.support:support-v4:28.0.0"
+//    implementation "com.android.support:support-v13:28.0.0"
+//    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.legacy:legacy-support-v13:1.0.0"
+    implementation 'com.google.android.material:material:1.12.0'
     //TODO : Please download newest NuwaSDK from Nuwa Developer Website https://dss.nuwarobotics.com/documents/sdkDescription/robotSdk
     //Step 1 : Copy aar to project lib folder : NuwaSDKExample\app\libs
     //Step 2 : Replace below NuwaSDK file name
@@ -53,4 +58,5 @@ dependencies {
     // Paho MQTT Android Service Library
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'com.google.android.libraries.ads.mobile.sdk:ads-mobile-sdk:0.19.0-beta01'
 }
