--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
@@ -25,7 +25,8 @@
 
         </activity>
         <!-- 新增 MQTT Activities -->
-        <activity android:name=".MqttConnectActivity">
+        <activity android:name=".MqttConnectActivity"
+            android:exported="true">
             <!-- 將啟動器貼到這裡 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
